# backend/internal/handler/routes/user.go
@@ -16,10 +16,12 @@ func StartUserRoutes(r *gin.Engine) {
 	userGroup := r.Group("/user")
 	userGroup.Use(middleware.AuthMiddleware())
 	{
-		userGroup.GET("/data", service.GetUserDataService) // user profile
-		
-		userGroup.GET("/manage/all", service.GetAllUsersService) // Admin only
+		userGroup.GET("/data", service.GetUserDataService) // user profile - all roles
+		userGroup.PATCH("/profile", service.UpdateUserProfileService) // update profile - all roles
+		userGroup.PATCH("/password", service.ChangePasswordService) // change password - all roles
+
+		userGroup.GET("/manage/all", service.GetAllUsersService)      // Admin only
 		userGroup.PATCH("/manage/:id", service.UpdateUserRoleService) // Admin only
-		userGroup.DELETE("/manage/:id", service.DeleteUserService) // Admin only
+		userGroup.DELETE("/manage/:id", service.DeleteUserService)    // Admin only
 	}
 }
