# backend/internal/model/dto/course_review.go
@@ -1,0 +1,6 @@
+package dto
+
+type CreateCourseReviewRequest struct {
+	Rating  int    `json:"rating" binding:"required,min=1,max=5"`
+	Comment string `json:"comment" binding:"required"`
+}
